fix scrolling background on Services magnific popup and fix navbar-collapse to scroll through  menu

--- a/assets/css/lightbox.css
+++ b/assets/css/lightbox.css
@@ -177,6 +177,7 @@ body:after {
   font-size: 15px;
   font-weight: 100;
   line-height: 1em;
+  overflow-y: auto;
 }
 
 .lb-data .lb-number {
